# thunder

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml  codespell.yml  go-lint.yml  go-test.yml  python-lint.yml  python-test.yml  release-train.yml  release.yml  rust-lint.yml  rust-test.yml  typescript-lint.yml  typescript-test.yml
.rulebook/: rulebook.json
.rulebook/specs/: go.md  php.md  python.md  typescript.md
.rulebook/tasks/: README.md
.rulebook/tasks/phase0_bootstrap-monorepo-ci/: .metadata.json  proposal.md  tasks.md
bench-out/: IMPROVEMENT-FINDINGS.md  T4.3-G5-VERDICT.md  skeleton-example.json  skeleton-example.md  t4.3-after-write-coalescing.json  t4.3-after-write-coalescing.md  t4.3-full-matrix.json  t4.3-full-matrix.md
conformance/: README.md  behavioral-scenarios.yaml  standard.yaml
conformance/profiles/: lexum.yaml  nexus.yaml  synap.yaml  vectorizer.yaml
conformance/vectors/: framing-cap-plus-one.yaml  framing-frame-at-cap.yaml  framing-over-cap-with-body.yaml  framing-partial-body.yaml  framing-partial-header.yaml  framing-two-frames-one-buffer.yaml  framing-zero-length-body.yaml  handshake-argless-hello-request.yaml  handshake-capabilities-hello-reply.yaml  handshake-map-hello-request.yaml  handshake-metadata-hello-reply.yaml  handshake-nexus-hello-reply.yaml  handshake-nexus-hello-request.yaml  handshake-vectorizer-hello-reply.yaml  handshake-vectorizer-hello-request.yaml  push-id-u32-max.yaml  request-ping.yaml  response-err-bracket-code.yaml  response-err-noauth.yaml  response-err-noperm.yaml  response-err-plain.yaml  response-err-wrongpass.yaml  response-pong-nested-ok.yaml  tolerance-bytes-int-array.yaml  tolerance-map-shaped-request.yaml  value-array-empty.yaml  value-bool-false-alone.yaml  value-bool-true-alone.yaml  value-bytes-canonical-bin.yaml  value-bytes-empty.yaml  value-float-inf.yaml  value-float-nan.yaml  value-float-neg-inf.yaml  value-float-neg-zero.yaml  value-float-plain.yaml  value-int-compact-boundaries.yaml  value-int-i64-extremes.yaml  value-map-empty.yaml  value-map-non-string-keys.yaml  value-nested-every-variant.yaml  (+3 more)
csharp/: HiveLLM.Thunder.sln  README.md
csharp/HiveLLM.Thunder/: ClientConfig.cs  Config.cs  Endpoint.cs  Errors.cs  FrameCodec.cs  HiveLLM.Thunder.csproj  Messages.cs  Pool.cs  Profile.cs  ThunderClient.cs  Value.cs  Wire.cs  WireCodec.cs
csharp/HiveLLM.Thunder.Tests/: BehaviorTests.cs  CorpusTests.cs  EndpointTests.cs  ErrorTests.cs  HiveLLM.Thunder.Tests.csproj  LiveSmokeTests.cs  MockServer.cs  PoolTests.cs  ProfileRegistryTests.cs  StandardConfigTests.cs  TestSupport.cs  TlsTests.cs  ValueTests.cs  WireTests.cs
csharp/interop-probe/: Program.cs  interop-probe.csproj
docs/: ARCHITECTURE.md  DAG.md  PRD.md  ROADMAP.md
docs/analysis/: 01-current-state.md  02-module-design.md  03-conformance-and-versioning.md  04-adoption-plan.md  05-protocol-crate-dissolution.md  06-benchmark-mandate.md  07-performance-baseline.md  README.md
docs/spec/: rpc-wire-format.md
docs/specs/: README.md  SPEC-001-wire-format.md  SPEC-002-configuration.md  SPEC-002-profiles.md  SPEC-003-client.md  SPEC-004-server.md  SPEC-005-conformance.md  SPEC-006-packaging-release.md  SPEC-007-benchmarks.md  SPEC-008-canonical-behavior.md
interop/: README.md  probe.py  run.py
php/: .gitignore  README.md  composer.json  phpstan.neon  phpunit.xml
php/src/Wire/: Codec.php  (+11 more)
php/tests/: ConformanceTest.php  VectorNode.php  WireTest.php
python/: .coverage  README.md  coverage.xml  pyproject.toml  requirements.txt
python/tests/: conftest.py  mockserver.py  test_client_async.py  test_client_sync.py  test_corpus.py  test_endpoint.py  test_errors.py  test_live_smoke.py  test_packaging.py  test_pool.py  test_profiles.py  test_skeleton.py  test_standard_config.py  test_tls.py  test_wire.py
python/thunder_rpc/: __init__.py  _handshake.py  aio.py  client.py  client_config.py  config.py  endpoint.py  errors.py  pool.py  profile.py  tls.py  value.py  wire.py
rust/: Cargo.toml  README.md
rust/.cargo/: audit.toml
rust/thunder/: Cargo.toml
rust/thunder-bench/: Cargo.toml  build.rs
rust/thunder-bench/src/: artifact.rs  backend.rs  bench_capnp.rs  bolt.rs  capnp_lane.rs  driver.rs  grpc.rs  http.rs  lib.rs  main.rs  memcached.rs  mongodb.rs  mqtt.rs  msgpack_rpc.rs  nats.rs  pinning.rs  postgres.rs  product_harness.rs  resp3.rs  scenarios.rs  stats.rs  stripped.rs  thrift_lane.rs
rust/thunder-bench/tests/: smoke.rs
rust/thunder-client/: Cargo.toml
rust/thunder-client/src/: client.rs  endpoint.rs  error.rs  lib.rs
rust/thunder-client/tests/: behavior.rs
rust/thunder-server/: Cargo.toml
rust/thunder-server/src/: dispatch.rs  lib.rs  listener.rs  session.rs  tests.rs
rust/thunder-wire/: Cargo.toml
rust/thunder-wire/src/: frame.rs  lib.rs  profile.rs  value.rs
rust/thunder-wire/tests/: corpus.rs  cross_decode.rs  fuzz_seeds.rs  profiles.rs
rust/thunder/examples/: hello.rs  interop.rs
rust/thunder/src/: lib.rs  tls.rs
rust/thunder/src/client/: conn.rs  endpoint.rs  error.rs  mod.rs  pool.rs
rust/thunder/src/server/: dispatch.rs  errors.rs  listener.rs  metrics.rs  mod.rs  observer.rs  session.rs  tests.rs
rust/thunder/src/wire/: config.rs  frame.rs  mod.rs  profile.rs  value.rs
rust/thunder/tests/: behavior.rs  corpus.rs  cross_decode.rs  fuzz_seeds.rs  live_smoke.rs  oversize_alloc.rs  pool.rs  profiles.rs  standard_config.rs  tls.rs
scripts/: check_published_versions.py  test_check_published_versions.py
typescript/: README.md  eslint.config.js  interop-probe.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/src/: client.ts  config.ts  endpoint.ts  errors.ts  index.ts  pool.ts  profile.ts  value.ts  wire-entry.ts  wire.ts
typescript/tests/: behavior.test.ts  browser-entry.test.ts  corpus.test.ts  endpoint.test.ts  errors.test.ts  live-smoke.test.ts  mock-server.ts  pool.test.ts  profiles.test.ts  standard-config.test.ts  tls-certs.ts  tls.test.ts  value.test.ts  wire.test.ts
(+141 files in other folders)
