[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivellm-thunder"
version = "0.1.0"
description = "HiveLLM binary RPC - wire codec + sync/async clients (skeleton; implementation lands at DAG T3.2)"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["msgpack>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["thunder_rpc"]

[tool.ruff]
line-length = 100
