[package]
name = "thunder-bench"
description = "Transport shootout harness - no-op backend, Thunder + HTTP listeners, parity drivers, committed artifacts (SPEC-007; skeleton scope of DAG T1.6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# One dependency now — the whole stack behind the default client+server features.
thunder = { path = "../thunder", version = "0.1.0" }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
serde = { workspace = true }
serde_json = "1"
core_affinity = "0.8.3"

[lints]
workspace = true
