[package]
name = "thunder-bench"
description = "Transport shootout harness - no-op backend, Thunder + HTTP listeners, parity drivers, committed artifacts (SPEC-007; skeleton scope of DAG T1.6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# One dependency now — the whole stack behind the default client+server features.
# Key `thunder` + `package = "thunder-rpc"` is the canonical rename form: the
# registry name collided (see ../thunder/Cargo.toml), the import name did not.
thunder = { path = "../thunder", version = "0.1.0", package = "thunder-rpc" }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
serde = { workspace = true }
# The MessagePack-RPC lane encodes with the *same* codec Thunder frames with,
# at the same version — that is what makes it a codec-constant comparison.
rmp-serde = { workspace = true }
serde_json = "1"
core_affinity = "0.8.3"
bson = "3"
pgwire = { version = "0.40", default-features = false, features = ["server-api"] }
async-trait = "0.1.89"
futures = "0.3.32"

[lints]
workspace = true
