[package]
name = "thunder-client"
description = "HiveLLM binary RPC client - multiplexed, profile-driven (placeholder until DAG T1.4)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thunder-wire = { path = "../thunder-wire", version = "0.1.0" }

[lints]
workspace = true
