[package]
name = "thunder-client"
description = "HiveLLM binary RPC client - multiplexed, profile-driven (SPEC-003)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thunder-wire = { path = "../thunder-wire", version = "0.1.0", features = ["tokio"] }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
