[package]
name = "thunder-server"
description = "HiveLLM binary RPC server - Synap-derived hot path, dispatch trait (placeholder until DAG T1.5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thunder-wire = { path = "../thunder-wire", version = "0.1.0" }

[lints]
workspace = true
