[package]
name = "thunder-server"
description = "HiveLLM binary RPC server - Synap-derived hot path, profile enforcement, dispatch trait (SPEC-004)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thunder-wire = { path = "../thunder-wire", version = "0.1.0", features = ["tokio"] }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
