[package]
name = "thunder-wire"
description = "HiveLLM binary RPC wire layer - value model, Request/Response, length-prefixed MessagePack frame codec (wire v1, frozen)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9"
# TST-030: the family's shipping reference implementation, used by
# tests/cross_decode.rs to pin Thunder to the reference, not to itself.
nexus-protocol = { path = "E:/HiveLLM/Nexus/crates/nexus-protocol" }

[lints]
workspace = true
