[package]
name = "thunder"
description = "HiveLLM binary RPC — one crate: wire codec (v1, frozen), multiplexed client, and the family server hot path, behind features (SPEC-001/003/004)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
# The wire layer is always compiled. `client` and `server` are additive and
# each pull in the async runtime; both are on by default so `cargo add thunder`
# gives the whole stack. A client-only SDK sets `default-features = false,
# features = ["client"]`; a server does likewise with ["server"].
default = ["client", "server"]
tokio = ["dep:tokio"]
client = ["tokio"]
server = ["tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_yaml = "0.9"
# TST-030: the family's shipping reference implementation, used by
# tests/cross_decode.rs to pin Thunder to the reference, not to itself.
nexus-protocol = "2.5"

[lints]
workspace = true
